--- a/housePredict.ipynb
+++ b/housePredict.ipynb
@@ -63,7 +63,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data = pd.read_csv('/Housing_dataset.csv')\n",
+        "data = pd.read_csv('/content/Housing.csv')\n",
         "print(data.head())"
       ],
       "metadata": {
